チューター登録RSpec

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,6 +18,16 @@ ja:
         wonder: 懸念
         welcome: 歓迎要件
         free: フリー記載欄
+      tutor:
+        name: 名前
+        birthday: 誕生日
+        gender: 性別
+        country_region: 出身国/地域
+        address: 現住所
+        job: 仕事
+        hobby: 趣味
+        motivation: 動機
+        free: フリー記載欄
       need:
         title: タイトル
         detail: 詳細
